--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
     
     <!-- Right Section: Request a Quote -->
     <div>
-      <a href="#" class="quote-button">REQUEST A QUOTE</a>
+      <a href="/quote" class="quote-button">REQUEST A QUOTE</a>
     </div>
   </div>
 
