--- a/public/index.html
+++ b/public/index.html
@@ -401,12 +401,12 @@
     }
   </style>
   
-  
   <section class="popular-destinations" style="padding: 2rem; background-color: #f9f9f9; font-family: 'Jost', sans-serif;">
-    <div class="container" style="max-width: 1200px; margin: 0 auto;">
+    <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 1rem;">
       <h2 class="section-title" style="font-size: 2rem; text-align: center; margin-bottom: 1rem; color: #333;">Most popular destinations for our travellers</h2>
       <p class="section-description" style="text-align: center; margin-bottom: 2rem; color: #555;">These are the places our travellers simply love to visit - where will you go next?</p>
-      <div class="destinations-grid" style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;">
+      
+      <div class="destinations-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-bottom: 2rem;">
         <div class="destination-card" style="background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease;">
           <img src="images/nairobi.jpg" alt="Africa tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
           <h3 class="destination-title" style="font-size: 1.5rem; margin: 1rem; color: #222; transition: background-color 0.3s ease, color 0.3s ease;">Africa tours</h3>
@@ -428,21 +428,34 @@
           <p class="destination-description" style="margin: 0 1rem 1.5rem; color: #666;">Explore the rich culture, art, and cuisine across Europe.</p>
         </div>
       </div>
+      
       <div class="more-destinations" style="text-align: center; margin-top: 2rem;">
-        <a href="#" class="more-link" style="display: inline-block; margin: 0.5rem; padding: 0.75rem 1.5rem; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease; font-size: 1rem;">
-          Discover all of our destinations
-          <span class="fa fa-arrow-right" style="margin-left: 0.5rem;"></span>
-        </a>
-        <a href="#" class="see-more-link" style="display: inline-block; margin: 0.5rem; padding: 0.75rem 1.5rem; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease; font-size: 1rem;">
-          See more than 70 destinations
-          <span class="fa fa-arrow-circle-right" style="margin-left: 0.5rem;"></span>
-        </a>
+        <a href="#" class="more-link" style="display: inline-block; margin: 0.5rem; padding: 0.75rem 1.5rem; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease; font-size: 1rem;">Discover all of our destinations <span class="fa fa-arrow-right" style="margin-left: 0.5rem;"></span></a>
+        <a href="#" class="see-more-link" style="display: inline-block; margin: 0.5rem; padding: 0.75rem 1.5rem; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease; font-size: 1rem;">See more than 70 destinations <span class="fa fa-arrow-circle-right" style="margin-left: 0.5rem;"></span></a>
       </div>
     </div>
   </section>
   
+  <style>
+    @media (max-width: 768px) {
+      .destinations-grid {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      }
+    }
+    @media (max-width: 480px) {
+      .destinations-grid {
+        grid-template-columns: 1fr;
+      }
+      .section-title {
+        font-size: 1.5rem;
+      }
+      .destination-title {
+        font-size: 1.25rem;
+      }
+    }
+  </style>
+  
   <script>
-    // Hover effect on the destination titles
     const destinationTitles = document.querySelectorAll('.destination-title');
     destinationTitles.forEach(title => {
       title.addEventListener('mouseenter', () => {
@@ -455,7 +468,7 @@
       });
     });
   </script>
-
+  
   
   
  
