--- a/public/experiences.html
+++ b/public/experiences.html
@@ -230,7 +230,7 @@
             <a href="/guides" style="color: black; text-decoration: none; padding: 5px 10px;">Guides</a>
         </li>
         <li style="margin: 0 0px;">
-            <a href="/gallery-section" style="color: black; text-decoration: none; padding: 5px 10px;">Experiences</a>
+            <a href="/experiences" style="color: black; text-decoration: none; padding: 5px 10px;">Experiences</a>
         </li>
 
         <!-- Contact Us Button -->
