--- a/public/index.html
+++ b/public/index.html
@@ -805,55 +805,140 @@
   </head>
   <body>
   
-    <section class="inspiration-section" style="padding: 2rem 10%; background-color: #f4f4f4;">
-      <div class="inspiration-header" style="text-align: center; margin-bottom: 2rem;">
-        <h2 style="font-size: 2.5rem; color: #333;">Need some inspiration?</h2>
-        <p style="font-size: 1.1rem; color: #777; max-width: 800px; margin: 0 auto;">
-          Start planning your next adventure and get inspired with our travel guide articles, filled with useful tips and advice to help you plan and enjoy your next adventure.
-        </p>
+   <!-- Inspiration Section -->
+<section class="inspiration-section" style="width: 100%; padding: 2rem 5%; background: linear-gradient(to bottom, #f4f4f4, #eaeaea); text-align: center;">
+  <div class="inspiration-header" style="margin-bottom: 1.5rem;">
+    <h2 style="font-size: 2.5rem; color: #FF0000; font-family: 'Inter', sans-serif; font-weight: 500; margin-bottom: 0.8rem;">Need more inspiration?</h2>
+    <div style="height: 3px; display: flex; justify-content: center; margin: 10px 0;">
+      <div style="flex: 1; background-color: blue; max-width: 15%;"></div>
+      <div style="flex: 1; background-color: maroon; max-width: 15%;"></div>
+      <div style="flex: 1; background-color: black; max-width: 15%;"></div>
+      <div style="flex: 1; background-color: gold; max-width: 15%;"></div>
+    </div>
+    <p style="font-size: 1.1rem; color: #555; max-width: 800px; margin: 0 auto; line-height: 1.6;">
+      Start planning your next adventure with our travel guides, packed with tips and advice to help you explore the world.
+    </p>
+  </div>
+
+  <!-- Grid Layout (4 Cards) -->
+  <div class="cards-container" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 0.8rem; justify-content: center;">
+    <!-- Card 1 -->
+    <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+      <div class="image-container" style="overflow: hidden;">
+        <img src="images/t3.jpg" alt="Inspiration" style="width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s ease;">
       </div>
-      <div class="cards-container" style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
-        <!-- Card 1 -->
-        <div class="card" style="width: 100%; max-width: 300px; background-color: white; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Card Image" style="width: 100%; height: 200px; object-fit: cover;">
-          <div class="card-content" style="padding: 1rem;">
-            <h3 style="font-size: 1.3rem; color: #333; margin-bottom: 1rem;">Stargazing and Northern Lights Tours</h3>
-            <p style="font-size: 1rem; color: #555;">Discover the beauty of the nights sky on a selection of guided tours.</p>
-          </div>
-        </div>
-        <!-- Card 2 -->
-        <div class="card" style="width: 100%; max-width: 300px; background-color: white; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Card Image" style="width: 100%; height: 200px; object-fit: cover;">
-          <div class="card-content" style="padding: 1rem;">
-            <h3 style="font-size: 1.3rem; color: #333; margin-bottom: 1rem;">Spotting Africa's Big 5 on a Safari Tour</h3>
-            <p style="font-size: 1rem; color: #555;">Travel to the best countries and spot Africa's big 5.</p>
-          </div>
-        </div>
-        <!-- Card 3 -->
-        <div class="card" style="width: 100%; max-width: 300px; background-color: white; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Card Image" style="width: 100%; height: 200px; object-fit: cover;">
-          <div class="card-content" style="padding: 1rem;">
-            <h3 style="font-size: 1.3rem; color: #333; margin-bottom: 1rem;">Blue Lagoon vs Sky Lagoon</h3>
-            <p style="font-size: 1rem; color: #555;">Compare Iceland’s iconic lagoons with this read to help you decide.</p>
-          </div>
-        </div>
+      <div class="card-content" style="padding: 1.2rem;">
+        <h3 style="font-size: 1.4rem; color: #222; margin-bottom: 0.6rem;">Explore Hidden Gems</h3>
+        <p style="font-size: 1rem; color: #555; line-height: 1.4;">Discover the world's best-kept travel secrets.</p>
       </div>
-      <div class="inspiration-footer" style="text-align: center; margin-top: 3rem;">
-        <p style="font-size: 1.2rem; color: #555; margin-bottom: 2rem;">We've got loads more guides to help you plan</p>
-        <div class="button-container" style="display: flex; justify-content: center; gap: 1.5rem;">
-          <a href="/guides">
-            <button style="padding: 0.8rem 2rem; font-size: 1rem; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease;">
-              Read more
-            </button>
-          </a>
-          <button class="secondary" style="padding: 0.8rem 2rem; font-size: 1rem; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease;">
-            <i class="fa fa-envelope" style="font-size: 16px; margin-right: 8px;"></i>
-            Get in touch today
-          </button>
-        </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+      <div class="image-container" style="overflow: hidden;">
+        <img src="images/t3.jpg" alt="Inspiration" style="width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s ease;">
       </div>
-    </section>
-  
+      <div class="card-content" style="padding: 1.2rem;">
+        <h3 style="font-size: 1.4rem; color: #222; margin-bottom: 0.6rem;">Adventure Awaits</h3>
+        <p style="font-size: 1rem; color: #555; line-height: 1.4;">Embark on thrilling journeys around the globe.</p>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+      <div class="image-container" style="overflow: hidden;">
+        <img src="images/t1.jpg" alt="Inspiration" style="width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s ease;">
+      </div>
+      <div class="card-content" style="padding: 1.2rem;">
+        <h3 style="font-size: 1.4rem; color: #222; margin-bottom: 0.6rem;">Unforgettable Destinations</h3>
+        <p style="font-size: 1rem; color: #555; line-height: 1.4;">Explore iconic locations worldwide.</p>
+      </div>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+      <div class="image-container" style="overflow: hidden;">
+        <img src="images/t2.jpg" alt="Inspiration" style="width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s ease;">
+      </div>
+      <div class="card-content" style="padding: 1.2rem;">
+        <h3 style="font-size: 1.4rem; color: #222; margin-bottom: 0.6rem;">Relax & Rejuvenate</h3>
+        <p style="font-size: 1rem; color: #555; line-height: 1.4;">Find the perfect escape for ultimate relaxation.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- CTA Section -->
+  <div class="inspiration-footer" style="margin-top: 2rem;">
+    <p style="font-size: 1.2rem; color: #555; margin-bottom: 1.5rem;">We've got more guides to fuel your wanderlust!</p>
+    <div class="button-container" style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
+      <a href="/guides">
+        <button style="padding: 0.8rem 1.8rem; font-size: 1rem; background: linear-gradient(to right, #007bff, #0056b3); color: white; border: none; border-radius: 6px; cursor: pointer; transition: transform 0.2s ease; display: flex; align-items: center;">
+          <i class="fas fa-book-open" style="margin-right: 8px;"></i> Read More
+        </button>
+      </a>
+      <button class="secondary" style="padding: 0.8rem 1.8rem; font-size: 1rem; background: linear-gradient(to right, #28a745, #1e7e34); color: white; border: none; border-radius: 6px; cursor: pointer; display: flex; align-items: center; gap: 8px; transition: transform 0.2s ease;">
+        <i class="fas fa-envelope" style="font-size: 16px;"></i> Get in Touch
+      </button>
+    </div>
+  </div>
+</section>
+
+<!-- Hover Effect Script -->
+<script>
+  document.querySelectorAll('.image-container img').forEach(img => {
+    img.addEventListener('mouseover', () => {
+      img.style.transform = 'scale(1.1)';
+    });
+    img.addEventListener('mouseout', () => {
+      img.style.transform = 'scale(1)';
+    });
+  });
+</script>
+
+<!-- Add Font Awesome CDN (for icons) -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+<!-- Responsive Media Queries -->
+<style>
+  @media (max-width: 768px) {
+    .inspiration-section {
+      padding: 2rem 2rem;
+    }
+
+    .inspiration-header h2 {
+      font-size: 2rem;
+    }
+
+    .cards-container {
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+
+    .card-content h3 {
+      font-size: 1.2rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .inspiration-header h2 {
+      font-size: 1.8rem;
+    }
+
+    .cards-container {
+      grid-template-columns: 1fr;
+    }
+
+    .card-content h3 {
+      font-size: 1.1rem;
+    }
+
+    .button-container {
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+</style>
+
   </body>
   </html>
   
