--- a/public/index.html
+++ b/public/index.html
@@ -1167,6 +1167,12 @@
     <!-- Header -->
     <div>
       <h2>Coolcations</h2>
+      <div style="height: 3px; display: flex; justify-content: left; margin: 10px 0;">
+        <div style="flex: 1; background-color: blue; max-width: 20%;"></div>
+        <div style="flex: 1; background-color: maroon; max-width: 20%;"></div>
+        <div style="flex: 1; background-color: black; max-width: 20%;"></div>
+        <div style="flex: 1; background-color: gold; max-width: 20%;"></div>
+      </div>
       <p class="flash-sale">Flash Sale: <span id="timer">01:09 hours left</span></p>
       <p>Enjoy off-season coolness or bask in the shade during summer</p>
     </div>
@@ -1284,11 +1290,19 @@
 </head>
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f5f5f5;">
   <section style="padding: 20px; text-align: center; background-color: #fff;">
-    <h2 style="margin-bottom: 20px; font-size: 2rem;">Adventure Styles</h2>
+    <h2 style="margin-bottom: 20px; font-size: 2rem;">Adventure Styles
+      <div style="height: 3px; display: flex; justify-content: center; margin: 10px 0;">
+        <div style="flex: 1; background-color: blue; max-width: 10%;"></div>
+        <div style="flex: 1; background-color: maroon; max-width: 10%;"></div>
+        <div style="flex: 1; background-color: black; max-width: 10%;"></div>
+        <div style="flex: 1; background-color: gold; max-width: 10%;"></div>
+      </div>
+    </h2>
+    
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
       
       <!-- Card 1 -->
-      <div style="position: relative; background-image: url('https://via.placeholder.com/300x200'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <div style="position: relative; background-image: url('images/t2.jpg'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
         <div style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3));"></div>
         <div style="position: absolute; top: 10px; left: 10px; background-color: red; color: #fff; padding: 5px 10px; font-size: 0.9rem; font-weight: bold; border-radius: 5px;">UP TO 57% OFF</div>
         <div style="position: relative; z-index: 2; padding: 10px;">
@@ -1301,7 +1315,7 @@
       </div>
 
       <!-- Card 2 -->
-      <div style="position: relative; background-image: url('https://via.placeholder.com/300x200'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <div style="position: relative; background-image: url('images/t3.jpg'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
         <div style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3));"></div>
         <div style="position: absolute; top: 10px; left: 10px; background-color: red; color: #fff; padding: 5px 10px; font-size: 0.9rem; font-weight: bold; border-radius: 5px;">UP TO 73% OFF</div>
         <div style="position: relative; z-index: 2; padding: 10px;">
@@ -1314,7 +1328,7 @@
       </div>
 
       <!-- Card 3 -->
-      <div style="position: relative; background-image: url('https://via.placeholder.com/300x200'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <div style="position: relative; background-image: url('images/t1.jpg'); background-size: cover; background-position: center; color: #fff; height: 200px; border-radius: 10px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
         <div style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3));"></div>
         <div style="position: absolute; top: 10px; left: 10px; background-color: red; color: #fff; padding: 5px 10px; font-size: 0.9rem; font-weight: bold; border-radius: 5px;">UP TO 70% OFF</div>
         <div style="position: relative; z-index: 2; padding: 10px;">
