--- a/public/index.html
+++ b/public/index.html
@@ -408,22 +408,22 @@
       
       <div class="destinations-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-bottom: 2rem;">
         <div class="destination-card" style="background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Africa tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
+          <img src="images/t1.jpg" alt="Africa tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
           <h3 class="destination-title" style="font-size: 1.5rem; margin: 1rem; color: #222; transition: background-color 0.3s ease, color 0.3s ease;">Africa tours</h3>
           <p class="destination-description" style="margin: 0 1rem 1.5rem; color: #666;">Explore the vibrant cultures, stunning landscapes, and incredible wildlife of Africa.</p>
         </div>
         <div class="destination-card" style="background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Kenya tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
+          <img src="images/t2.jpg" alt="Kenya tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
           <h3 class="destination-title" style="font-size: 1.5rem; margin: 1rem; color: #222; transition: background-color 0.3s ease, color 0.3s ease;">Kenya tours</h3>
           <p class="destination-description" style="margin: 0 1rem 1.5rem; color: #666;">Experience the majestic safaris, breathtaking scenery, and unique culture of Kenya.</p>
         </div>
         <div class="destination-card" style="background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Asia tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
+          <img src="images/t3.jpg" alt="Asia tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
           <h3 class="destination-title" style="font-size: 1.5rem; margin: 1rem; color: #222; transition: background-color 0.3s ease, color 0.3s ease;">Asia tours</h3>
           <p class="destination-description" style="margin: 0 1rem 1.5rem; color: #666;">Discover the beauty, history, and modern vibrancy of Asia.</p>
         </div>
         <div class="destination-card" style="background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease;">
-          <img src="images/nairobi.jpg" alt="Europe tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
+          <img src="images/t1.jpg" alt="Europe tours" class="destination-image" style="width: 100%; height: 200px; object-fit: cover;">
           <h3 class="destination-title" style="font-size: 1.5rem; margin: 1rem; color: #222; transition: background-color 0.3s ease, color 0.3s ease;">Europe tours</h3>
           <p class="destination-description" style="margin: 0 1rem 1.5rem; color: #666;">Explore the rich culture, art, and cuisine across Europe.</p>
         </div>
