--- a/public/index.html
+++ b/public/index.html
@@ -559,12 +559,53 @@
     <div class="cards-container">
       <!-- Card Template -->
       <script>
-        const cardsData = [
-          { id: "map1", title: "Land of the Northern Lights", duration: "5 days", tourType: "Tours", priceOld: "£1,045 pp", priceNew: "£732 pp" },
-          { id: "map2", title: "Iceland Explorer", duration: "7 days", tourType: "Adventure", priceOld: "£1,200 pp", priceNew: "£850 pp" },
-          { id: "map3", title: "Aurora Borealis", duration: "6 days", tourType: "Luxury", priceOld: "£1,500 pp", priceNew: "£1,100 pp" },
-          { id: "map4", title: "Glacier Expeditions", duration: "4 days", tourType: "Expeditions", priceOld: "£900 pp", priceNew: "£700 pp" }
-        ];
+       const cardsData = [
+  { 
+    id: "map1", 
+    title: "Maasai Mara Safari", 
+    duration: "5 days", 
+    tourType: "Wildlife Safari", 
+    location: "Mara Triangle, Kenya", 
+    starts: "Nairobi, Kenya", 
+    ends: "Maasai Mara, Kenya", 
+    priceOld: "KES 160,000 pp", 
+    priceNew: "KES 112,000 pp" 
+  },
+  { 
+    id: "map2", 
+    title: "Serengeti Adventure", 
+    duration: "7 days", 
+    tourType: "Adventure", 
+    location: "Seronera, Tanzania", 
+    starts: "Arusha, Tanzania", 
+    ends: "Serengeti, Tanzania", 
+    priceOld: "KES 180,000 pp", 
+    priceNew: "KES 127,500 pp" 
+  },
+  { 
+    id: "map3", 
+    title: "Gorilla Trekking Uganda", 
+    duration: "6 days", 
+    tourType: "Luxury", 
+    location: "Bwindi Impenetrable Forest, Uganda", 
+    starts: "Kampala, Uganda", 
+    ends: "Bwindi Forest, Uganda", 
+    priceOld: "KES 225,000 pp", 
+    priceNew: "KES 165,000 pp" 
+  },
+  { 
+    id: "map4", 
+    title: "Zanzibar Beach Escape", 
+    duration: "4 days", 
+    tourType: "Beach Holiday", 
+    location: "Nungwi Beach, Zanzibar", 
+    starts: "Stone Town, Zanzibar", 
+    ends: "Nungwi Beach, Zanzibar", 
+    priceOld: "KES 135,000 pp", 
+    priceNew: "KES 105,000 pp" 
+  }
+];
+
       </script>
   
       <!-- JavaScript to generate cards dynamically -->
